--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fontes.googleapi.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+body{
+  font-family: 'Roboto', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components{
+  .menu-tab{
+    @apply text-gray-800 cursor-pointer select-none;  
+  }
+  .active-menu-tab{
+    @apply rounded-full px-4 py-2 text-white select-none;
+  }
+}
+
+.bg-primary{
+  background: #ea580c;
+}
+
+.text-primary{
+  collor: #ea580c;
+}
+
+.home-banner{
+  background-image: url('../src/assets/background.jpg');
+  height: 400px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.banner{
+  background-image: url('../src/assets/background.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
